syntax = "proto3";

package orderhistory;

option go_package = "meaningfullname/Yurt_Mart/orderhistory/proto";

service OrderHistoryService {
  rpc AddOrderHistory (AddOrderHistoryRequest) returns (AddOrderHistoryResponse);
  rpc GetOrderHistory (GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (GetOrderByIdResponse);
  rpc Reorder (ReorderRequest) returns (ReorderResponse);
  rpc DeleteOrderHistory (DeleteOrderHistoryRequest) returns (DeleteOrderHistoryResponse);
  rpc GetRecentOrders (GetRecentOrdersRequest) returns (GetRecentOrdersResponse);
}

message Order {
  string order_id = 1;
  string user_id = 2;
  string username = 3;
  repeated string product_ids = 4;
  double total = 5;
  string timestamp = 6;
}

message AddOrderHistoryRequest {
  Order order = 1;
  string username = 2;
}

message AddOrderHistoryResponse {
  Order order = 1;
}

message GetOrderHistoryRequest {
  string user_id = 1;
}

message GetOrderHistoryResponse {
  repeated Order orders = 1;
}

message GetOrderByIdRequest {
  string order_id = 1;
}

message GetOrderByIdResponse {
  Order order = 1;
}

message ReorderRequest {
  string order_id = 1;
}

message ReorderResponse {
  Order order = 1;
}

message DeleteOrderHistoryRequest {
  string order_id = 1;
}

message DeleteOrderHistoryResponse {
  bool success = 1;
}

message GetRecentOrdersRequest {
  string user_id = 1;
  int32 limit = 2;
}

message GetRecentOrdersResponse {
  repeated Order orders = 1;
}